--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jest": "^23.6.0",
     "massive": "^5.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "integration-test": "jest --watch server/"
   },
   "eslintConfig": {
     "extends": "react-app"
