--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gsap": "^2.0.2",
     "massive": "^5.6.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
