--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "gsap": "^2.0.2",
     "massive": "^5.6.0",
     "react": "^16.6.3",
+    "react-card-flip": "^0.3.0",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-scroll-horizontal": "^1.5.1",
     "redux": "^4.0.1"
   },
   "scripts": {
