--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scroll-horizontal": "^1.5.1",
+    "react-typing-animation": "^1.4.0",
     "redux": "^4.0.1"
   },
   "scripts": {
