--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "massive": "^5.6.0",
+    "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
