--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "2.1.1",
     "react-scroll-horizontal": "^1.5.1",
     "react-typing-animation": "^1.4.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "scroll-snap": "^1.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
