--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
     "massive": "^5.6.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
