--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-scroll-horizontal": "^1.5.1",
+    "react-slick": "^0.23.2",
     "react-typing-animation": "^1.4.0",
     "redux": "^4.0.1",
-    "scroll-snap": "^1.0.6"
+    "scroll-snap": "^1.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
