--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "gsap": "^2.0.2",
     "google-maps-react": "^2.0.2",
+    "gsap": "^2.0.2",
     "massive": "^5.6.0",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-card-flip": "^0.3.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.6.3",
     "react-geocode": "^0.1.2",
     "react-redux": "^5.1.1",
