--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "massive": "^5.6.0",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-card-flip": "^0.3.0",
     "react-datetime": "^2.16.3",
