--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "google-maps-react": "^2.0.2",
